Fix navigation visibility and remove absolute positioning breaking event times

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,7 +1,7 @@
 /* Navigation Panel */
 #nav-panel {
     position: fixed;
-    left: -110px;
+    left: -60px;
     top: 120px;
     width: 110px;
     max-height: calc(100vh - 150px);
